@@ -1,3 +1,2 @@
 ## Coroutines Loom Playground
 
-Enable JDK 19 preview features via `--enable-preview` VM options.
